- 2/19/2023
  * Added favicon

- 2/18/2023
  * Added four new brand colors
  * Changed name-logo
  * Made product button have a darker box-shadow
  * Changed shop card styles
  * Set company team picture user-select to none

- 2/17/2023
  * Added plant stand items in shop
  * Added company team picture
  * Changed c_email to be plantable0@gmail.com
  * Made navbar have a darker box-shadow
  * Made main buttons have a darker box-shadow
  * Fixed c_email opening in _self
  
- 2/10/2023
  * Changed image-logo
  * Shutdown support page

- 1/20/2023
  * Added a support page

- 1/16/2023
  * Fixed a bug where the sidebar didn't open
  * Made page transitions smoother

- 1/14/2023
  * Fixed a bug where the header dissapeared when scrolling too far
  * Changed the link /shop/products/plant-stand to no longer show ".html"
  * Dark Mode now displays correctly
  * Forced removal of ".html" at the end of webpages
  * The "Plant Enclosure" button in the shop now links to "#plant-enclosure" instead of "#product2"

- 1/13/2023
  * Added unofficial website banner on the bottom
  * Added a website changelog
  * Added new setting "Disable Unofficial Warning"
  * The url bar now shows "https://schoptcompweb4729.github.io/*" instead of "https://schoptcompweb4729.github.io/*.html"
  * The sidebar now says "Plantable" instead of "c_name" 
  * The "About" button on the sidebar now links to "/#about" instead of "/about"
  * The "Plant Enclosure" button in the shop now says "Offsale" instead of "Not currently for sale"