@@ -53,43 +53,9 @@
       <section>
         <div>
           <div class="main-page-content">
-            <h1>Plant Stands</h1>
+            <h1>Order Plant Stands</h1>
             <div class="content-submain">
-              <div class="plantable-listing-container">
-                <div class="plantable-listing-item">
-                  <div class="plantable-listing-image">
-                    <img src="/src/IMG/placeholder.png" alt="Placeholder">
-                  </div>
-                  <div class="plantable-listing-info">
-                    <div>
-                      <p>Basic Plant Stand + Pot</p>
-                    </div>
-                    <div>
-                      <p>Price $14.99</p>
-                    </div>
-                    <div class="plantable-listing-buy-btn-container">
-                      <a class="main-btn plantable-listing-buy-btn" href="/shop/order">Place Order</a>
-                    </div>
-                  </div>
-                </div>
-                <!--<br><br>
-                <div class="plantable-listing-item">
-                  <div class="plantable-listing-image">
-                    <img src="/src/IMG/placeholder.png" alt="Placeholder">
-                  </div>
-                  <div class="plantable-listing-info">
-                    <div>
-                      <p>Plant Stand Name</p>
-                    </div>
-                    <div>
-                      <p>Price $XX.XX</p>
-                    </div>
-                    <div class="plantable-listing-buy-btn-container">
-                      <button class="main-btn plantable-listing-buy-btn" data-item-id="2">Buy</button>
-                    </div>
-                  </div>
-                </div> -->
-              </div>
+              <iframe class="plantable-ps-order-form" src="https://docs.google.com/forms/d/e/1FAIpQLSfmxpPkQBFrVbQSt5dOpxQYZCos20zUEoo81O6Oq7pkIwmTAg/viewform?embedded=true" width="640" height="1580" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
           </div>
         </div>
